Syncer & Dropdown render overflow fix

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -32,6 +32,7 @@ body {
   background: var(--bg-color-1);
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body:has([data-modal]) {
